# wsc

./: .gitignore  app.py  fmt.cmd  main.py  package_mac.sh  package_mac_local.sh  pkg.sh  pyproject.toml  readme.org  requirements.txt  sample.json  test_app.py
.github/workflows/: build_macos.yml  ci-build-macos.yml  macos-package.yml
example/南瓜瓶/: 南瓜瓶子_接水.atlas  南瓜瓶子_接水.skel  特殊玩法水位 - 南瓜瓶子.csv
