[project]
name = "wsc"
version = "1.1.3"
description = "Water Sorter Configur"
readme = "readme.org"
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.10.0",
]

[tool.ruff]
line-length = 108

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.black]
line-length = 108
target-version = ['py311']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 48

[tool.autoflake]
remove_all_unused_imports = true
ignore_init_module_imports = true

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=25.9.0",
    "isort>=7.0.0",
    "ruff>=0.14.1",
]